# plant-disease-backend

./: .dockerignore  .gitignore  Dockerfile  check_db_connection.py  pyproject.toml  test_db.py
.github/workflows/: deploy.yml
api/: urls.py  views.py
backend/: settings.py  urls.py
